solved the white spaces and testing some scrolling effects v3

--- a/public/styles.css
+++ b/public/styles.css
@@ -9,7 +9,7 @@
 }
 body{
     margin:0px;
-    background-color: linear-gradient(to right, #232235, #23152f);
+    background-color: #2b1f3d
     overscroll-behavior-y: contain;
     overscroll-behavior-x: none;
 
